# mdnews

./: README.md  feeds.yml  index.html  mdnews.py  pyproject.toml
.github/workflows/: generate.yml
mdnews/: __main__.py  article.py  cache.py  content.py  feed.py  guid.py
